# esp32-pix-firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  buzzer.c  buzzer.h  display_st7735.c  display_st7735.h  http_client.c  http_client.h  http_server.c  http_server.h  idf_component.yml  qrcode_gen.c  qrcode_gen.h  servo_ctrl.c  servo_ctrl.h  wifi_manager.c  wifi_manager.h
main/images/: rapport_pix_logo.h
tools/: convert_logo_rgb565.py
